--- a/docs/_.array.builders.js.md
+++ b/docs/_.array.builders.js.md
@@ -1,6 +1,6 @@
 ### array.builders
 
-> Functions to build arrays. <a href="docs/lodash.array.builders.js.html" class="btn btn-primary btn-xs">View Annotated Source</a>
+> Functions to build arrays. <a href="_.array.builders.js.html" class="btn btn-primary btn-xs">View Annotated Source</a>
 
 #### cat
 
