[util.strings] Add documentation for slugify

--- a/docs/_.util.strings.js.md
+++ b/docs/_.util.strings.js.md
@@ -57,6 +57,19 @@ _.implode(["H", "o", "m", "e", "r"]);
 
 --------------------------------------------------------------------------------
 
+#### slugify
+
+**Signature:** `_.slugify(str:String)`
+
+Slugifies a string, converting spaces and dots to dashes and inserting dashes between words.
+
+```javascript
+_.slugify("ExampleString.that-covers-it.all");
+// => "example-string-that-covers-it-all"
+```
+
+--------------------------------------------------------------------------------
+
 #### strContains
 
 **Signature:** `_.strContains(str:String, search:String)`
